--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: @task do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, :class => "form-control", :placeholder => "Title?"%>
   <%= f.label :details %>
-  <%= f.text_field :details %>
+  <%= f.text_field :details, :class => "form-control", :placeholder => "Details?" %>
   <%= f.submit :UpdateTask %>
 <% end %>
