--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,10 @@
-<h2>Edit Task</h2>
+<div class="container">
 
-<%= render 'form', task: @task %>
+  <h2>Edit Task</h2>
 
-<%= link_to 'Back', tasks_path %>
+
+  <%= render 'form', task: @task %>
+
+  <%= link_to 'Back', tasks_path %>
+
+</div>
