--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,17 +1,26 @@
-<h1>My Tasks</h1>
+<div class="container">
+  <h1>My Tasks</h1>
 
-<ul>
-<% @tasks.each do |task| %>
-  <li>
-    <h2>
-      <%= link_to task.title, task_path(task) %>
-    </h2>
-  <%= link_to "Delete",
-    task_path(task),
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-  %>
-  </li>
-<% end %>
-</ul>
+  <ul class="list-group">
+  <% @tasks.each do |task| %>
+    <li class="list-group-item">
+      <p>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" <%= task.completed && "checked" %> id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+          <%= link_to task.title, task_path(task) %>
+        </label>
+        </div>
+      </p>
 
-<%= link_to 'Add a new task', task_new_path %>
+    <%= link_to "Delete",
+      task_path(task),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+    %>
+    </li>
+  <% end %>
+  </ul>
+
+  <%= link_to 'Add a new task', task_new_path %>
+
+</div>
