--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,22 @@
-<p><%= @task.details %></p>
+<div class="container">
 
-<h2><%= link_to @task.title %></h2>
+  <%= link_to 'Edit list', task_edit_path(@task) %>
 
-<%= link_to 'Edit list', task_edit_path %>
+  <p><%= @task.details %></p>
 
-<%= link_to 'Back to list', tasks_path %>
+  <P><%= link_to @task.title %></P>
+
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" <%= @task.completed && "checked" %> id="flexCheckDefault">
+      <% if @task.completed %>
+      <%= "This task completed" %>
+      <% else %>
+      <%= "This task not yet completed" %>
+      <% end %>
+  </div>
+
+  <br>
+
+  <%= link_to 'Back to list', tasks_path %>
+
+</div>
